tests/feature_tests/snapshots/e2e__feature_tests__existing_installation__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
fnm install v8.11.3
fnm install v8.11.3 2>&1 | grep 'already installed'
